@startuml GupShup Cafe - Database ER Diagram (Current State)

' PlantUML version 1.2025.x
!theme plain
skinparam backgroundColor #FEFEFE
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam entity {
    BackgroundColor #FFF9C4
    BorderColor #F57C00
}
skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
}

title GupShup Cafe - Database Schema (Testing Branch - SQLite)

' Users table
entity "users" as users {
  **<u>user_id</u>** : TEXT (PK)
  --
  name : TEXT NOT NULL
  email : TEXT UNIQUE NOT NULL
  hashed_password : TEXT NOT NULL
  current_cefr_level : TEXT DEFAULT 'A0'
  topic_categories : TEXT (JSON)
  created_at : DATETIME NOT NULL
  last_active : DATETIME
}

' Rooms table
entity "rooms" as rooms {
  **<u>room_id</u>** : TEXT (PK)
  --
  **Configuration:**
  room_name : TEXT
  topic_title : TEXT NOT NULL
  topic_category : TEXT NOT NULL
  max_participants : INTEGER DEFAULT 6
  speaking_time_per_turn : INTEGER DEFAULT 60
  num_rounds : INTEGER DEFAULT 3
  cefr_level : TEXT NOT NULL
  --
  **State:**
  status : TEXT NOT NULL
  current_round : INTEGER DEFAULT 0
  current_speaker_index : INTEGER DEFAULT 0
  rounds_completed : INTEGER DEFAULT 0
  participant_count : INTEGER DEFAULT 0
  --
  **Timing:**
  created_at : DATETIME NOT NULL
  started_at : DATETIME
  ended_at : DATETIME
  duration_seconds : INTEGER DEFAULT 0
  --
  **Agents:**
  facilitator_agent_id : TEXT
  english_agent_id : TEXT
  --
  **Metadata:**
  <i>created_by</i> : TEXT NOT NULL (FK)
}

' Participants table
entity "participants" as participants {
  **<u>participant_id</u>** : TEXT (PK)
  --
  <i>user_id</i> : TEXT NOT NULL (FK)
  <i>room_id</i> : TEXT NOT NULL (FK)
  --
  **Identity:**
  anonymous_name : TEXT NOT NULL
  avatar_color : TEXT
  --
  **Room Config:**
  role : TEXT DEFAULT 'participant'
  is_ready : INTEGER DEFAULT 0
  turn_order : INTEGER DEFAULT 0
  --
  **Real-Time State:**
  is_speaking : INTEGER DEFAULT 0
  is_muted : INTEGER DEFAULT 0
  socket_id : TEXT
  --
  **CEFR Tracking:**
  starting_cefr_level : TEXT NOT NULL
  ending_cefr_level : TEXT
  --
  **Connection:**
  joined_at : DATETIME NOT NULL
  left_at : DATETIME
  created_at : DATETIME NOT NULL
  --
  **Optional:**
  campusOrLocation : TEXT
  speaking_time_seconds : INTEGER DEFAULT 0
}

' Transcripts table
entity "transcripts" as transcripts {
  **<u>transcript_id</u>** : TEXT (PK)
  --
  <i>room_id</i> : TEXT NOT NULL (FK)
  <i>participant_id</i> : TEXT NOT NULL (FK)
  <i>user_id</i> : TEXT NOT NULL (FK)
  --
  **Context:**
  round_number : INTEGER NOT NULL
  turn_order : INTEGER NOT NULL
  --
  **Content:**
  transcript_text : TEXT NOT NULL
  language : TEXT DEFAULT 'en'
  stt_confidence : REAL DEFAULT 0.0
  --
  **Timing:**
  started_at : DATETIME NOT NULL
  ended_at : DATETIME NOT NULL
  duration_seconds : INTEGER NOT NULL
  --
  **Audio Metadata:**
  word_count : INTEGER NOT NULL
  speech_rate : REAL NOT NULL
  --
  **Processing:**
  is_processed : INTEGER DEFAULT 0
  processed_at : DATETIME
  --
  **Audio Reference:**
  audio_file_url : TEXT
  --
  **Timestamp:**
  created_at : DATETIME NOT NULL
}

' Feedback table
entity "feedback" as feedback {
  **<u>id</u>** : TEXT (PK)
  --
  <i>room_id</i> : TEXT NOT NULL (FK)
  <i>participant_id</i> : TEXT NOT NULL (FK)
  <i>user_id</i> : TEXT NOT NULL (FK)
  --
  feedback_type : TEXT NOT NULL
  created_at : DATETIME NOT NULL
  --
  **Common Fields:**
  display_message : TEXT
  agent_id : TEXT
  agent_model : TEXT
  --
  **Comprehensive Feedback:**
  cefr_speaking : TEXT
  cefr_listening : TEXT
  listening_activity : TEXT
  response_effectiveness : TEXT
  listening_positive_observation : TEXT
  listening_improvement_suggestion : TEXT
  fluency : TEXT
  sentence_complexity : TEXT
  pace : TEXT
  filler_examples : TEXT (JSON)
  grammar : TEXT
  vocab_examples : TEXT (JSON)
  vocab_analysis : TEXT
  vocab_positive_observation : TEXT
  vocab_improvement_suggestion : TEXT
  understanding_level : TEXT
  explanation_quality : TEXT
  interaction_style : TEXT
  depth_of_understanding_suggestion : TEXT
  comparative_performance : TEXT
  comparative_suggestion : TEXT
  summary_strength : TEXT
  summary_improvement_area : TEXT
  target_cefr_level : TEXT
}

' Agents table
entity "agents" as agents {
  **<u>agent_id</u>** : TEXT (PK)
  --
  <i>room_id</i> : TEXT NOT NULL (FK)
  --
  agent_model : TEXT NOT NULL
  agent_type : TEXT DEFAULT 'english'
  status : TEXT DEFAULT 'active'
  total_interactions : INTEGER DEFAULT 0
  created_at : DATETIME NOT NULL
}

' Topics table
entity "topics" as topics {
  **<u>topic_id</u>** : INTEGER (PK, AUTOINCREMENT)
  --
  title : TEXT NOT NULL
  description : TEXT
  category : TEXT
  source : TEXT DEFAULT 'fallback'
  used_count : INTEGER DEFAULT 0
  created_at : DATETIME
}

' Relationships
users ||--o{ rooms : "creates (created_by)"
users ||--o{ participants : "joins as (user_id)"
users ||--o{ transcripts : "speaks (user_id)"
users ||--o{ feedback : "receives (user_id)"

rooms ||--o{ participants : "contains"
rooms ||--o{ transcripts : "contains"
rooms ||--o{ feedback : "generates"
rooms ||--o{ agents : "has"

participants ||--o{ transcripts : "speaks"
participants ||--o{ feedback : "receives"

agents }o--|| rooms : "assigned to"

note right of users
  **Authentication:**
  - Email/password auth
  - CEFR level tracking
  - Topic preferences (JSON)
  
  **Usage:**
  - Created during signup
  - Updated on login (last_active)
end note

note right of rooms
  **Room Status Values:**
  - WAITING: Lobby phase
  - IN_PROGRESS: Active discussion
  - COMPLETED: Finished
  - CANCELLED: Aborted
  
  **Features:**
  - Max 6 participants (configurable)
  - 3 rounds by default
  - 60 seconds per turn
  - Linked facilitator/feedback agents
  
  **Index:**
  idx_rooms_status for fast filtering
end note

note right of participants
  **Roles:**
  - HOST: Room creator
  - PARTICIPANT: Regular user
  - LISTENER: Passive observer
  - AGENT: AI facilitator
  
  **SQLite Booleans:**
  - Stored as INTEGER (0/1)
  - is_ready, is_speaking, is_muted
  
  **Features:**
  - Anonymous names per session
  - Avatar colors for UI
  - Turn order for speaking
  - CEFR progress tracking
end note

note right of transcripts
  **Speech-to-Text:**
  - Web Speech API on client
  - Transcript sent via socket
  - STT confidence score
  
  **Processing:**
  - is_processed flag for AI queue
  - Triggers English feedback agent
  
  **Metadata:**
  - Word count, speech rate
  - Round/turn context
  - Audio file URL (optional)
end note

note right of feedback
  **Two Types:**
  1. **Instant** (2-3 sec):
     - Quick grammar tips
     - display_message
  
  2. **Comprehensive** (end of session):
     - Full CEFR assessment
     - Detailed analysis
     - 30+ fields populated
  
  **Generated by:**
  - EnglishFeedbackAgent
  - Uses MCP grammar tools
end note

note right of agents
  **Agent Types:**
  - FACILITATOR: Discussion flow
  - FEEDBACK: English analysis
  - MODERATOR: Content moderation
  
  **Models:**
  - Gemini (dev)
  - Bedrock (prod)
  
  **Tracking:**
  - Total interactions counter
  - Status (active/inactive/error)
end note

note right of topics
  **Topic Generation:**
  - Fallback curated topics
  - AI-generated (optional)
  - Usage tracking
  
  **Categories:**
  - Technology
  - Environment
  - Education
  - Healthcare
  - Current Events
  - etc.
end note

note as DBFeatures
  **Database Features:**
  
  1. **WAL Mode**: Concurrent reads/writes
  2. **Foreign Key Constraints**: Enforced
  3. **Indexes**: idx_rooms_status for performance
  4. **Migrations**: Version-controlled schema updates
  5. **Async Operations**: aiosqlite for non-blocking I/O
  6. **Retry Logic**: Handles SQLite locking
  7. **Transaction Support**: ACID guarantees
  
  **Storage:**
  - SQLite file on EFS (AWS)
  - Shared across Fargate tasks
  - Automatic backups
end note

@enduml
